prevent content from overlapping above header

--- a/src/app/layout/styles/_header.scss
+++ b/src/app/layout/styles/_header.scss
@@ -2,6 +2,7 @@
     width: 100%;
     height: 70px;
     background-color: white;
+    position: relative;
     z-index: 10000;
     box-shadow: 0px 0px 2px 0px #444;
     .navbar, .container-fluid {
